--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>Property Managemant System</title>
 </head>
