--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ font-family: Century Gothic;
 
 header
 {
-background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(/images/7.jpg);
+background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://github.com/IIITM-Jay/Property-management-System-Django-Full-Stack-/blob/main/images/7.jpg);
 height:100vh;
 background-size:cover;
 background-position:center;
