--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="search-box">
 <form action="http://127.0.0.1:8000/front">
 <input class="search-txt" type="text" name="" placeholder="search">
-<a class="search-btn" href="http://127.0.0.1:8000/base">
+<a class="search-btn" href="/front-end/base.html">
 <i class ="fas fa-search"></i>
 
 </a>
