--- a/login.html
+++ b/login.html
@@ -787,7 +787,9 @@ body {
   
 
 
-height: 1500px;
+height:100vh;
+background-size:cover;
+background-position:center;
 
 	/* max-height: 600px; */
 	width: 1000px;
