--- a/login.html
+++ b/login.html
@@ -783,7 +783,7 @@ label:after {
 flex: 200%;
 }
 
-body {
+header{
   
 
 
@@ -813,7 +813,7 @@ background-position:center;
 			400px 0;
 		}
 	}
-}
+
 </style>
 </body>
 </html>
