--- a/login.html
+++ b/login.html
@@ -22,6 +22,10 @@
 
 <style>
 /* base.scss */
+	*{
+margin: 0;
+padding: 0;
+	}
  {
   box-sizing: border-box;
 }
@@ -787,9 +791,7 @@ header{
   
 
 
-height:100vh;
-background-size:cover;
-background-position:center;
+
 
 	/* max-height: 600px; */
 
@@ -801,6 +803,9 @@ background-position:center;
 	background-repeat: repeat-x;
 	
 	animation: 50s para infinite linear;
+	height:100vh;
+background-size:cover;
+background-position:center;
 	}
 
 @keyframes para {
