--- a/login.html
+++ b/login.html
@@ -805,6 +805,8 @@ body{
 	animation: 50s para infinite linear;
 background-size:cover;
 background-position:center;
+		height:100vh;
+
 	}
 
 @keyframes para {
